Algolia example added.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+ALGOLIA_INDEXING_ENABLED=false
+
 GATSBY_ALGOLIASEARCH_APP_ID=exampleappid
 GATSBY_ALGOLIASEARCH_ADMIN_KEY=exampleadminkey
 GATSBY_ALGOLIASEARCH_SEARCH_KEY=examplesearchkey
