--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-helmet": "^5.2.0",
+    "react-instantsearch": "^5.0.3",
     "slug": "^0.9.1",
     "styled-components": "^3.2.5"
   },
