--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
   "plugins": ["react", "jsx-a11y", "import", "prettier", "flowtype", "eslint-comments", "graphql"],
   "rules": {
     "react/jsx-filename-extension": "off",
+    "react/no-unescaped-entities": "off",
     "flowtype/require-valid-file-annotation": ["error", "always"],
     "jsx-a11y/anchor-is-valid": [
       "error",
