--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,6 @@
 {
-  "processors": ["stylelint-processor-styled-components"],
-  "extends": ["stylelint-config-recommended", "stylelint-config-styled-components"]
+  "extends": ["stylelint-config-sass-guidelines", "stylelint-config-prettier"],
+  "rules": {
+    "max-nesting-depth": 2
+  }
 }
