--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
+  "files.associations": {
+    ".lintstagedrc": "json",
+    ".stylelintrc": "json",
+    ".remarkrc": "json"
+  },
   "editor.formatOnSave": true,
   "flow.useNPMPackagedFlow": true,
   "javascript.validate.enable": false,
   "eslint.enable": true,
   "stylelint.enable": true,
   "css.validate": false,
-  "files.associations": {
-    ".lintstagedrc": "json",
-    ".stylelintrc": "json",
-    ".remarkrc": "json"
-  }
+  "prettier.stylelintIntegration": true
 }
