--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
   "*.js": ["yarn run format:js", "git add"],
-  "*.scss": ["yarn run format:css", "git add"]
+  "*.scss": ["yarn run format:css", "git add"],
+  "*.md": ["yarn run format:md", "git add"]
 }
