--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "normalize.css": "^8.0.0",
     "prismjs": "^1.13.0",
     "react": "^16.3.1",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.3.1",
     "react-helmet": "^5.2.0",
     "react-instantsearch": "^5.0.3",
     "slug": "^0.9.1"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
