--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "react-instantsearch": "^5.0.3",
     "slug": "^0.9.1"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "yarn run develop",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "jest --env=jsdom",
     "lint:js": "eslint .",
     "lint:flow": "flow check",
     "lint:css": "stylelint 'src/**/*.scss'",
@@ -54,6 +56,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.3",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -61,12 +69,14 @@
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-graphql": "^1.5.0",
     "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jest": "^21.15.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "flow-bin": "^0.69.0",
     "flow-typed": "^2.4.0",
     "husky": "^0.14.3",
+    "jest": "^22.4.3",
     "lint-staged": "^7.0.4",
     "prettier": "^1.11.1",
     "prettier-stylelint": "^0.4.2",
