--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,7 @@
 [ignore]
 <PROJECT_ROOT>/node_modules/relay-runtime/*
 <PROJECT_ROOT>/node_modules/relay-compiler/*
+<PROJECT_ROOT>/node_modules/graphql/*
 
 [include]
 
@@ -11,10 +12,6 @@ libdefs.js
 [lints]
 
 [options]
-module.system=haste
-module.system.node.resolve_dirname=node_modules
-module.system.node.resolve_dirname=src
-
 esproposal.class_static_fields=enable
 esproposal.class_instance_fields=enable
 
