--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graphql": "0.11.7",
     "normalize.css": "^8.0.0",
     "prismjs": "^1.13.0",
+    "qs": "^6.5.1",
     "react": "^16.3.1",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.3.1",
@@ -36,16 +37,14 @@
     "react-instantsearch": "^5.0.3",
     "slug": "^0.9.1"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "yarn run develop",
-    "test": "jest --env=jsdom",
-    "coverage": "jest --env=jsdom --coverage",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "lint:js": "eslint .",
     "lint:flow": "flow check",
     "lint:css": "stylelint 'src/**/*.scss'",
@@ -81,6 +80,8 @@
     "flow-typed": "^2.4.0",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
+    "jest-environment-jsdom": "^22.4.3",
+    "jest-environment-jsdom-global": "^1.0.3",
     "lint-staged": "^7.0.4",
     "prettier": "^1.11.1",
     "prettier-stylelint": "^0.4.2",
