--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,38 @@
 version: 2
 jobs:
-  build:
+  build_dependencies:
     docker:
       - image: circleci/node:latest
+    working_directory: ~/repo
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/repo
       - restore_cache:
           keys:
           - dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
           - dependencies-
       - run:
           name: Install
           command: yarn install
       - save_cache:
           paths:
-            - node_modules
+            - ~/repo/node_modules
           key: dependencies-{{ checksum "package.json" }}
+      - persist_to_workspace:
+          root: .
+          paths: node_modules
+
+  test_app:
+    docker:
+      - image: circleci/node:latest
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/repo
       - run:
-          name: Lint Check
+          name: Lint
           command: yarn lint
       - run:
           name: Test
@@ -26,3 +40,28 @@ jobs:
       - run:
           name: Coverage
           command: yarn coverage
+
+  tweet:
+    docker:
+      - image: circleci/node:latest
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/repo
+      - run: yarn tweet
+
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build_dependencies
+      - test_app:
+          requires:
+            - build_dependencies
+      - tweet:
+          requires:
+            - test_app
+          filters:
+            branches:
+              only: master
