--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "empty": "^0.10.1",
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
+    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-google-analytics": "^1.0.29",
     "gatsby-plugin-manifest": "^1.0.19",
     "gatsby-plugin-nprogress": "^1.0.14",
@@ -37,7 +38,9 @@
     "react-instantsearch": "^5.0.3",
     "slug": "^0.9.1"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
