Repo moved to organization.

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ GATSBY_ALGOLIASEARCH_APP_ID=exampleappid
 GATSBY_ALGOLIASEARCH_ADMIN_KEY=exampleadminkey
 GATSBY_ALGOLIASEARCH_SEARCH_KEY=examplesearchkey
 
-GATSBY_REPO_URL=https://github.com/alpcanaydin/jargon.ist
+GATSBY_REPO_URL=https://github.com/jargonist/jargon.ist
